WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130200
[iOS WebKit2] Crash on iPad when displaying a select element with options
https://bugs.webkit.org/show_bug.cgi?id=130200
Summary
[iOS WebKit2] Crash on iPad when displaying a select element with options
Enrica Casucci
Reported
2014-03-13 11:53:44 PDT
_singleSelectionIndex should be initialized to NSNotFound for multiSelect elements. <
rdar://problem/16316187
>
Attachments
Patch
(1.30 KB, patch)
2014-03-13 11:55 PDT
,
Enrica Casucci
no flags
Details
Formatted Diff
Diff
Patch with ChangeLog
(1.49 KB, patch)
2014-03-13 11:57 PDT
,
Enrica Casucci
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2014-03-13 11:55:23 PDT
Created
attachment 226606
[details]
Patch
Enrica Casucci
Comment 2
2014-03-13 11:57:21 PDT
Created
attachment 226607
[details]
Patch with ChangeLog
Simon Fraser (smfr)
Comment 3
2014-03-13 12:18:51 PDT
Comment on
attachment 226607
[details]
Patch with ChangeLog View in context:
https://bugs.webkit.org/attachment.cgi?id=226607&action=review
> Source/WebKit2/UIProcess/ios/forms/WKFormSelectPopover.mm:118 > NSInteger currentIndex = 0; > + _singleSelectionIndex = NSNotFound;
Please swap these two lines.
Enrica Casucci
Comment 4
2014-03-13 12:21:13 PDT
Committed revision 165554.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug