[iOS WebKit2] Crash on iPad when displaying a select element with options. https://bugs.webkit.org/show_bug.cgi?id=130200 <rdar://problem/16316187>

Reviewed by Simon Fraser.

_singleSelectionIndex should be initialized to NSNotFound for multiSelect elements.

* UIProcess/ios/forms/WKFormSelectPopover.mm:
(-[WKSelectTableViewController initWithView:hasGroups:]):



Canonical link: https://commits.webkit.org/148148@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165554 268f45cc-cd09-0410-ab3c-d52691b4dbfc